predictors: Don't initialize database after shutdown

PredictorDatabaseInternal::Initialize() can be called after the shutdown of
PredictorDatabase. In testing scenario it could lead to accessing a database
file in a directory that doesn't exist, because profile directories are deleted
after test.

This CL checks a cancellation flag that is set on PredictorDatabase shutdown
before opening a database file.

This CL also enables the predictor by default on ChromeOS since the disk I/O
issue should be resolved.

Bug: 839886
Change-Id: I27fbdda2cac282a44bd1bac962b27bf11de8520b
Reviewed-on: https://chromium-review.googlesource.com/1092851
Reviewed-by: Egor Pasko <pasko@chromium.org>
Commit-Queue: Alexandr Ilin <alexilin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565983}