chrome/browser/predictors/predictor_database.cc
@@ -97,6 +97,11 @@ void PredictorDatabaseInternal::Initialize() {
   DCHECK(db_task_runner_->RunsTasksInCurrentSequence());
   // TODO(tburkard): figure out if we need this.
   //  db_->set_exclusive_locking();
+  if (autocomplete_table_->IsCancelled() ||
+      resource_prefetch_tables_->IsCancelled()) {
+    return;
+  }
+
   bool success = db_->Open(db_path_);
 
   if (!success)
