chrome/browser/predictors/predictor_table_base.h
@@ -41,6 +41,7 @@ class PredictorTableBase
   virtual void LogDatabaseStats() = 0;
   void Initialize(sql::Connection* db);
   void SetCancelled();
+  bool IsCancelled();
   sql::Connection* DB();
   void ResetDB();
 
